comment out wysiwyg for now

--- a/public/the_bridge_templates/product/edit.html
+++ b/public/the_bridge_templates/product/edit.html
@@ -20,8 +20,7 @@
       <br>
 
 <!-- THIS SHOULD BE IT'S OWN ELEMENT, #FIX AND SHARE ACROSS ALL PRODUCT EDIT PAGES -->
-<div class="product">
-  <div id="alerts"></div>
+<!--   <div id="alerts"></div>
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
       <div class="btn-group">
         
@@ -70,10 +69,7 @@
 
     <div id="editor">
       Go ahead
-    </div>
-
-    </div>
-
+    </div> -->
 <!-- END OF #FIX FOR ITS OWN PRODUCT -->
 
     <br>
