--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -96,15 +96,15 @@
 
 <!-- THIS SHOULD BE IT'S OWN RESOURCE, USED HERE AND ON THE PRODUCT/#/EDIT PAGE -->
 <div class="tags">
-  <div ng-hide="editTags" ng-repeat="tag in product.tag_list track by $index" class="tag label">
-    {{tag.name}} <span class="badge">7</span>
+  <div ng-hide="editTags" ng-repeat="tag in product.tag_list track by $index" ng-init="taggings_count(tag)" class="tag label">
+    {{tag.name}} <span class="badge">{{tag.tag_count}}</span>
   </div>
   <a class="xxx tag label" ng-hide="editTags" ng-click="showEditTagsBox()">Edit Tags <span class="badge">+/-</span></a>
 
   <div ng-show="editTags">
     <div class="tag-editor">
-      <span ng-repeat="n in product.tag_list track by $index" class="on tag label" ng-click="deleteTag(n,product)" title="Remove this tag.">
-        {{n.name}} <span class="badge">7</span>
+      <span ng-repeat="n in product.tag_list track by $index" ng-init="taggings_count(n)" class="on tag label" ng-click="deleteTag(n,product)" title="Remove this tag.">
+        {{n.name}} <span class="badge">{{n.tag_count}}</span>
       </span>
         <input type="text" class="search-tags" placeholder="Type here to tag..." ng-model="searchTagText" ng-change="searchTags(searchTagText,product)">
     </div>
