--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -41,25 +41,25 @@
         </div>
         <div ng-controller="Tag_CategoryController as tag_category_ctrl">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2" ng-repeat="category in categories">
               <div class="dropdown">
                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Accessibility
+                  {{category.name}}
                  <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 1}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: category.id }" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
-            </div>
-            <div class="col-md-2">
+            </div> 
+         <!--   <div class="col-md-2">
               <div class="dropdown">
                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   Cost
                  <span class="caret"></span>
                 </button>
                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 2}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: 2}" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
             </div>
@@ -70,7 +70,7 @@
                  <span class="caret"></span>
                 </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 3}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: 3}" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
             </div>
@@ -81,7 +81,7 @@
                  <span class="caret"></span>
                 </button>
                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 4}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: 4}" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
             </div>
@@ -92,7 +92,7 @@
                  <span class="caret"></span>
                 </button>
                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 5}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: 5}" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
             </div>
@@ -103,10 +103,10 @@
                  <span class="caret"></span>
                 </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: 6}"><a href="#">{{tag.name}}</a></li>
+                    <li ng-repeat="tag in tags | filter:{tag_category_id: 6}" ng-init="taggings_count(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
          </div>
         <div class="product-list row" ng-if="isLoading">
