--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -20,13 +20,10 @@
             </div>
           <div class="col-lg-6">  
             <div class="new-product-link">
-              <label style="float: left;" data-toggle="modal" data-target="#add_modal" class="btn btn-default">
+              <label data-toggle="modal" data-target="#add_modal" class="btn btn-default">
                 <i class="fa fa-plus"></i> Add a new technology.
               </label>
-              <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-default">
-                <i class="fa fa-question-circle"></i> Help.
-              </label>
-              <label style="float: right;" class="btn btn-default" ng-model="searchFilters.integrated" btn-checkbox>
+              <label class="btn btn-default" ng-model="searchFilters.integrated" btn-checkbox>
                   <i class="fa fa-plug"></i>  Show connected apps.
               </label>
             </div>
@@ -50,6 +47,7 @@
             </div>
           </div>
         </div>
+        <br>
         <div class="product-list row" ng-if="isLoading">
           <div class="col-xs-12 center">
           <br><br><br><br><br>
@@ -58,6 +56,14 @@
         </div>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
+                <div class="floater-1 alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        Learn <strong><a data-toggle="modal" data-target="#help_modal">how to</a></strong> use the marketplace.
+      </div>
+      <div class="floater-2 alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        Submit a <strong><a data-toggle="modal" data-target="#add_modal">new product</a></strong> listing.
+      </div>
           <div ng-repeat="product in products | filter:filterProducts " class="product-container col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <a class="tile" href="/#/product/{{product.id}}">
               <div ng-class="product.integrated ? 'product integrated' : 'product'">
