--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -11,11 +11,11 @@
 
 <div class="floater-1 alert alert-warning alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  Learn <strong><a data-toggle="modal" data-target="#help_modal">how to</a></strong> use the marketplace.
+  <a data-toggle="modal" data-target="#help_modal">Learn <strong>how to</strong> use the marketplace.</a>
 </div>
 <div class="floater-2 alert alert-success alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  Submit a <strong><a data-toggle="modal" data-target="#add_modal">new product</a></strong> listing.
+  <a data-toggle="modal" data-target="#add_modal">Submit a <strong>new product</strong> listing.</a>
 </div>
 
   <div class="featurette dark">
