--- a/public/the_bridge_templates/product/edit.html
+++ b/public/the_bridge_templates/product/edit.html
@@ -1,3 +1,9 @@
+<style>
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+</style>
 <div class="edit">
 <div ng-controller="ProductController as productCtrl" class="row">
   <br>
@@ -125,12 +131,6 @@
                           <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="fa fa-indent"></i></a>
                         </div>
                         <div class="btn-group">
-                          <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="fa fa-align-left"></i></a>
-                          <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="fa fa-align-center"></i></a>
-                          <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="fa fa-align-right"></i></a>
-                          <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
-                        </div>
-                        <div class="btn-group">
                         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
                           <div class="dropdown-menu input-append">
                             <input class="span2" placeholder="URL" type="text" data-edit="createLink"/>
@@ -143,7 +143,8 @@
                           <a class="btn" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
                         </div>
                       </div>
-                     <div id="editor" contenteditable="true"></div>
+                     <div id="editor" name="editor" data-target="content" contenteditable="true" ng-bind-html="product.detailed_description"></div>
+                     <textarea type="text" id="content" title="Describe what the technology allows users to do in non-technical terms. Please include a few summary sentences, a bulleted “How-to Overview” section, and a bulleted “Features” section." ng-model="product.detailed_description" class="hidden" rows="19"></textarea>
                       <script>
                       $('#editor').wysiwyg();
                       </script>
@@ -221,7 +222,17 @@
         <p>The following information will help social impact organizations find the right technology to fit their needs. The “tile summary” is the main listing on openMarketplace. The filter tags help organizations sort through numerous technologies based on their needs, location, field users, and other factors.</p>
         <p>We encourage suggestions from all members of the community whether they be product developers, consultants, or end-user organizations. There are a few required fields that cover basic and summary information. Beyond that, we ask that listings focus on the functionality of each technology and what it enables users to do and avoid statements that place more value on one technology over another. Your submission must be reviewed and accepted by one of the core contributors at openfn before it is updated. Again, please refrain from using value words to ensure the listing is accepted promptly.</p>
         <p>Terms and Conditions: Open[Fn] reserves editorial decision-making power over listings that are published. We reserve the right to edit posts or request revisions. In the spirit of openness, we also maintain the right to indicate the author of listings on the openMarketplace.</p>
-        <button ng-click="editProduct(product)" class="btn btn-success" type="submit">Submit Edits</button>
+        <button ng-click="editProduct(product)" id="submit" class="btn btn-success" type="submit">Submit Edits</button>
+        <script>
+            $(document).ready(function () {
+                $('#editor').on("keyup", function () {
+                  alert("changed");
+                  var targetName = $('#editor').attr('data-target');
+                  $('#'+targetName).val($('#editor').html());
+                  $('#'+targetName).trigger("change");
+                });
+            });
+        </script>
 </div>
 
 </div>
